gr-sys/bindings/gr.rs

extern "C" {
    pub fn gr_path(
        arg1: ::core::ffi::c_int,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: *const ::core::ffi::c_char,
    );
}
extern "C" {
    pub fn gr_setborderwidth(arg1: f64);
}
extern "C" {
    pub fn gr_inqborderwidth(arg1: *mut f64);
}
extern "C" {
    pub fn gr_setbordercolorind(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_inqbordercolorind(arg1: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_selectclipxform(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_inqclipxform(arg1: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_setprojectiontype(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_inqprojectiontype(arg1: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_setperspectiveprojection(arg1: f64, arg2: f64, arg3: f64);
}
extern "C" {
    pub fn gr_inqperspectiveprojection(arg1: *mut f64, arg2: *mut f64, arg3: *mut f64);
}
extern "C" {
    pub fn gr_settransformationparameters(
        arg1: f64,
        arg2: f64,
        arg3: f64,
        arg4: f64,
        arg5: f64,
        arg6: f64,
        arg7: f64,
        arg8: f64,
        arg9: f64,
    );
}
extern "C" {
    pub fn gr_inqtransformationparameters(
        arg1: *mut f64,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut f64,
        arg8: *mut f64,
        arg9: *mut f64,
    );
}
extern "C" {
    pub fn gr_setorthographicprojection(
        arg1: f64,
        arg2: f64,
        arg3: f64,
        arg4: f64,
        arg5: f64,
        arg6: f64,
    );
}
extern "C" {
    pub fn gr_inqorthographicprojection(
        arg1: *mut f64,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: *mut f64,
    );
}
extern "C" {
    pub fn gr_camerainteraction(arg1: f64, arg2: f64, arg3: f64, arg4: f64);
}
extern "C" {
    pub fn gr_setwindow3d(arg1: f64, arg2: f64, arg3: f64, arg4: f64, arg5: f64, arg6: f64);
}
extern "C" {
    pub fn gr_inqwindow3d(
        arg1: *mut f64,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: *mut f64,
    );
}
extern "C" {
    pub fn gr_setscalefactors3d(arg1: f64, arg2: f64, arg3: f64);
}
extern "C" {
    pub fn gr_inqscalefactors3d(arg1: *mut f64, arg2: *mut f64, arg3: *mut f64);
}
extern "C" {
    pub fn gr_setspace3d(arg1: f64, arg2: f64, arg3: f64, arg4: f64);
}
extern "C" {
    pub fn gr_inqspace3d(
        arg1: *mut ::core::ffi::c_int,
        arg2: *mut f64,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut f64,
    );
}
extern "C" {
    pub fn gr_text3d(
        arg1: f64,
        arg2: f64,
        arg3: f64,
        arg4: *mut ::core::ffi::c_char,
        axis: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_inqtext3d(
        arg1: f64,
        arg2: f64,
        arg3: f64,
        arg4: *mut ::core::ffi::c_char,
        axis: ::core::ffi::c_int,
        arg5: *mut f64,
        arg6: *mut f64,
    );
}
extern "C" {
    pub fn gr_settextencoding(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_inqtextencoding(arg1: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_loadfont(arg1: *mut ::core::ffi::c_char, arg2: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_setcallback(
        arg1: ::core::option::Option<
            unsafe extern "C" fn(arg1: *const ::core::ffi::c_char) -> *mut ::core::ffi::c_char,
        >,
    );
}
extern "C" {
    pub fn gr_setthreadnumber(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_setpicturesizeforvolume(arg1: ::core::ffi::c_int, arg2: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_setvolumebordercalculation(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_setapproximativecalculation(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_inqvolumeflags(
        arg1: *mut ::core::ffi::c_int,
        arg2: *mut ::core::ffi::c_int,
        arg3: *mut ::core::ffi::c_int,
        arg4: *mut ::core::ffi::c_int,
        arg5: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gr_cpubasedvolume(
        arg1: ::core::ffi::c_int,
        arg2: ::core::ffi::c_int,
        arg3: ::core::ffi::c_int,
        arg4: *mut f64,
        arg5: ::core::ffi::c_int,
        arg6: *mut f64,
        arg7: *mut f64,
        arg8: *mut f64,
        arg9: *mut f64,
    );
}
extern "C" {
    pub fn gr_cpubasedvolume_2pass(
        arg1: ::core::ffi::c_int,
        arg2: ::core::ffi::c_int,
        arg3: ::core::ffi::c_int,
        arg4: *mut f64,
        arg5: ::core::ffi::c_int,
        arg6: *mut f64,
        arg7: *mut f64,
        arg8: *mut f64,
        arg9: *mut f64,
        arg10: *const cpubasedvolume_2pass_t,
    ) -> *const cpubasedvolume_2pass_t;
}
extern "C" {
    pub fn gr_inqvpsize(
        arg1: *mut ::core::ffi::c_int,
        arg2: *mut ::core::ffi::c_int,
        arg3: *mut f64,
    );
}
extern "C" {
    pub fn gr_polygonmesh3d(
        arg1: ::core::ffi::c_int,
        arg2: *const f64,
        arg3: *const f64,
        arg4: *const f64,
        arg5: ::core::ffi::c_int,
        arg6: *const ::core::ffi::c_int,
        arg7: *const ::core::ffi::c_int,
    );
}
pub type kernel_f = ::core::option::Option<
    unsafe extern "C" fn(
        arg1: *const data_point3d_t,
        arg2: *const ::core::ffi::c_void,
        arg3: *const point3d_t,
        arg4: *const point3d_t,
    ) -> f64,
>;
pub type radius_f = ::core::option::Option<
    unsafe extern "C" fn(arg1: *const data_point3d_t, arg2: *const ::core::ffi::c_void) -> f64,
>;
extern "C" {
    pub fn gr_volume_nogrid(
        arg1: ::core::ffi::c_ulong,
        arg2: *const data_point3d_t,
        arg3: *const ::core::ffi::c_void,
        arg4: ::core::ffi::c_int,
        arg5: kernel_f,
        arg6: *mut f64,
        arg7: *mut f64,
        arg8: f64,
        arg9: radius_f,
    );
}
extern "C" {
    pub fn gr_volume_interp_tri_linear_init(arg1: f64, arg2: f64, arg3: f64);
}
extern "C" {
    pub fn gr_volume_interp_gauss_init(arg1: f64, arg2: *mut f64);
}
extern "C" {
    pub fn gr_volume_interp_tri_linear(
        arg1: *const data_point3d_t,
        arg2: *const ::core::ffi::c_void,
        arg3: *const point3d_t,
        arg4: *const point3d_t,
    ) -> f64;
}
extern "C" {
    pub fn gr_volume_interp_gauss(
        arg1: *const data_point3d_t,
        arg2: *const ::core::ffi::c_void,
        arg3: *const point3d_t,
        arg4: *const point3d_t,
    ) -> f64;
}
extern "C" {
    pub fn gr_setmathfont(font: ::core::ffi::c_int);
}
extern "C" {
    pub fn gr_inqmathfont(font: *mut ::core::ffi::c_int);
}
